--- a/student_pages/index.html
+++ b/student_pages/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="zh-CN">
 
 <head>
@@ -8,46 +8,273 @@
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
   <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
   <style>
-    :root { --bg: #0b1220; --panel: rgba(255, 255, 255, 0.06); --panel-strong: rgba(255, 255, 255, 0.12); --text: #e8f0ff; --sub: #98b4ff; --primary: #3a86ff; --cyan: #22d3ee; --glow: 0 0 18px rgba(58, 134, 255, .45); }
-    * { box-sizing: border-box }
-    html, body { height: 100% }
-    body { margin: 0; color: var(--text); background: radial-gradient(1200px 600px at 70% -10%, rgba(26, 54, 120, .35), transparent), radial-gradient(800px 400px at -10% 30%, rgba(34, 211, 238, .25), transparent), var(--bg); font-family: "Segoe UI", "PingFang SC", "Microsoft YaHei", Helvetica, Arial, sans-serif; overflow-x: hidden }
-    .data-flow::before { content: ""; position: fixed; inset: 0; pointer-events: none; opacity: .35; background: repeating-linear-gradient(120deg, rgba(47, 93, 230, .12) 0 2px, transparent 2px 10px), repeating-linear-gradient(300deg, rgba(34, 211, 238, .08) 0 2px, transparent 2px 12px); animation: flow 14s linear infinite }
-    @keyframes flow { to { transform: translateX(-120px) } }
-    header { position: relative; padding: 28px 24px; text-align: center; z-index: 1; background: linear-gradient(135deg, #2740ff, #15b2ff); box-shadow: var(--glow); border-bottom: 1px solid rgba(255, 255, 255, .12) }
-    header h1 { margin: 0; font-size: 28px }
-    header p { margin: 6px 0 0; color: #cfe0ff }
-    .wrap { display: grid; grid-template-columns: 720px 1fr; gap: 20px; padding: 22px; max-width: 1300px; margin: 0 auto }
-    .card { background: var(--panel); border: 1px solid var(--panel-strong); border-radius: 16px; box-shadow: var(--glow) }
-    .left { padding: 18px }
-    .section-title { display: flex; align-items: center; gap: 8px; color: #dbe7ff; font-weight: 700; margin: 6px 0 16px }
-    .section-title::before { content: ""; width: 8px; height: 8px; border-radius: 50%; background: var(--primary); box-shadow: 0 0 8px var(--primary) }
-    .grid-2 { display: grid; grid-template-columns: 1fr 1fr; gap: 8px }
-    .field { display: flex; flex-direction: column; gap: 6px }
-    .field label { color: #cfe0ff }
-    .field input[type=text] { background: rgba(255, 255, 255, .05); border: 1px solid rgba(255, 255, 255, .1); border-radius: 8px; padding: 8px 10px; color: var(--text) }
-    .matrix { width: 100%; border-collapse: separate; border-spacing: 0; overflow: hidden; border-radius: 12px; border: 1px solid rgba(255, 255, 255, .08) }
-    .matrix th, .matrix td { border-right: 1px solid rgba(255, 255, 255, .08); border-bottom: 1px solid rgba(255, 255, 255, .08); padding: 10px; text-align: center }
-    .matrix thead th { background: linear-gradient(180deg, rgba(78, 161, 255, .22), rgba(34, 211, 238, .06)); color: #e7f1ff }
-    .matrix tbody th { background: rgba(255, 255, 255, .04); color: #dbe7ff; font-weight: 600; width: 96px; text-align: center }
-    .matrix td { height: 64px }
-    .num-wrap { position: relative; display: inline-block; white-space: nowrap; }
-    .num-wrap .num { padding-right: 18px; }
-    .num-wrap .pct { position: absolute; right: 8px; top: 50%; transform: translateY(-50%); color: #cfe0ff; opacity: .9; pointer-events: none; }
-    .num { width: 72px; max-width: 40vw; text-align: center; color: var(--text); background: rgba(255, 255, 255, .05); border: 1px solid rgba(255, 255, 255, .1); padding: 8px 10px; border-radius: 8px; outline: none }
-    .num:focus { border-color: #64b5ff; box-shadow: 0 0 0 3px rgba(100, 181, 255, .15) }
-    .actions { display: flex; gap: 10px; margin-top: 14px; align-items: center }
-    button { appearance: none; border: none; cursor: pointer; padding: 10px 14px; border-radius: 10px; color: #0b1220; font-weight: 700; background: linear-gradient(135deg, #4ea1ff, #22d3ee); box-shadow: 0 8px 24px rgba(46, 155, 255, .35) }
-    button.secondary { color: #d7e4ff; background: transparent; border: 1px solid rgba(148, 190, 255, .35) }
-    button:active { transform: translateY(1px) }
-    button:disabled { filter: grayscale(.6); opacity: .7; cursor: not-allowed }
-    .sum-tip { margin-left: auto; font-variant-numeric: tabular-nums }
-    .sum-tip .ok { color: #7CFFB2 }
-    .sum-tip .bad { color: #ffb3b3 }
-    .chart-card { padding: 10px; display: flex; flex-direction: column }
-    #chart { height: 560px; width: 100% }
-    .tips { margin: 4px 10px 10px; color: #9fb7ff; font-size: 12px }
-    @media (max-width: 980px) { .wrap { grid-template-columns: 1fr } }
+    :root {
+      --bg: #0b1220;
+      --panel: rgba(255, 255, 255, 0.06);
+      --panel-strong: rgba(255, 255, 255, 0.12);
+      --text: #e8f0ff;
+      --sub: #98b4ff;
+      --primary: #3a86ff;
+      --cyan: #22d3ee;
+      --glow: 0 0 18px rgba(58, 134, 255, .45);
+    }
+
+    * {
+      box-sizing: border-box
+    }
+
+    html,
+    body {
+      height: 100%
+    }
+
+    body {
+      margin: 0;
+      color: var(--text);
+      background: radial-gradient(1200px 600px at 70% -10%, rgba(26, 54, 120, .35), transparent), radial-gradient(800px 400px at -10% 30%, rgba(34, 211, 238, .25), transparent), var(--bg);
+      font-family: "Segoe UI", "PingFang SC", "Microsoft YaHei", Helvetica, Arial, sans-serif;
+      overflow-x: hidden
+    }
+
+    .data-flow::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      opacity: .35;
+      background: repeating-linear-gradient(120deg, rgba(47, 93, 230, .12) 0 2px, transparent 2px 10px), repeating-linear-gradient(300deg, rgba(34, 211, 238, .08) 0 2px, transparent 2px 12px);
+      animation: flow 14s linear infinite
+    }
+
+    @keyframes flow {
+      to {
+        transform: translateX(-120px)
+      }
+    }
+
+    header {
+      position: relative;
+      padding: 28px 24px;
+      text-align: center;
+      z-index: 1;
+      background: linear-gradient(135deg, #2740ff, #15b2ff);
+      box-shadow: var(--glow);
+      border-bottom: 1px solid rgba(255, 255, 255, .12)
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 28px
+    }
+
+    header p {
+      margin: 6px 0 0;
+      color: #cfe0ff
+    }
+
+    .wrap {
+      display: grid;
+      grid-template-columns: 720px 1fr;
+      gap: 20px;
+      padding: 22px;
+      max-width: 1300px;
+      margin: 0 auto
+    }
+
+    .card {
+      background: var(--panel);
+      border: 1px solid var(--panel-strong);
+      border-radius: 16px;
+      box-shadow: var(--glow)
+    }
+
+    .left {
+      padding: 18px
+    }
+
+    .section-title {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      color: #dbe7ff;
+      font-weight: 700;
+      margin: 6px 0 16px
+    }
+
+    .section-title::before {
+      content: "";
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: var(--primary);
+      box-shadow: 0 0 8px var(--primary)
+    }
+
+    .grid-2 {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 8px
+    }
+
+    .field {
+      display: flex;
+      flex-direction: column;
+      gap: 6px
+    }
+
+    .field label {
+      color: #cfe0ff
+    }
+
+    .field input[type=text] {
+      background: rgba(255, 255, 255, .05);
+      border: 1px solid rgba(255, 255, 255, .1);
+      border-radius: 8px;
+      padding: 8px 10px;
+      color: var(--text)
+    }
+
+    .matrix {
+      width: 100%;
+      border-collapse: separate;
+      border-spacing: 0;
+      overflow: hidden;
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, .08)
+    }
+
+    .matrix th,
+    .matrix td {
+      border-right: 1px solid rgba(255, 255, 255, .08);
+      border-bottom: 1px solid rgba(255, 255, 255, .08);
+      padding: 10px;
+      text-align: center
+    }
+
+    .matrix thead th {
+      background: linear-gradient(180deg, rgba(78, 161, 255, .22), rgba(34, 211, 238, .06));
+      color: #e7f1ff
+    }
+
+    .matrix tbody th {
+      background: rgba(255, 255, 255, .04);
+      color: #dbe7ff;
+      font-weight: 600;
+      width: 96px;
+      text-align: center
+    }
+
+    .matrix td {
+      height: 64px
+    }
+
+    .num-wrap {
+      position: relative;
+      display: inline-block;
+      white-space: nowrap;
+    }
+
+    .num-wrap .num {
+      padding-right: 18px;
+    }
+
+    .num-wrap .pct {
+      position: absolute;
+      right: 8px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #cfe0ff;
+      opacity: .9;
+      pointer-events: none;
+    }
+
+    .num {
+      width: 72px;
+      max-width: 40vw;
+      text-align: center;
+      color: var(--text);
+      background: rgba(255, 255, 255, .05);
+      border: 1px solid rgba(255, 255, 255, .1);
+      padding: 8px 10px;
+      border-radius: 8px;
+      outline: none
+    }
+
+    .num:focus {
+      border-color: #64b5ff;
+      box-shadow: 0 0 0 3px rgba(100, 181, 255, .15)
+    }
+
+    .actions {
+      display: flex;
+      gap: 10px;
+      margin-top: 14px;
+      align-items: center
+    }
+
+    button {
+      appearance: none;
+      border: none;
+      cursor: pointer;
+      padding: 10px 14px;
+      border-radius: 10px;
+      color: #0b1220;
+      font-weight: 700;
+      background: linear-gradient(135deg, #4ea1ff, #22d3ee);
+      box-shadow: 0 8px 24px rgba(46, 155, 255, .35)
+    }
+
+    button.secondary {
+      color: #d7e4ff;
+      background: transparent;
+      border: 1px solid rgba(148, 190, 255, .35)
+    }
+
+    button:active {
+      transform: translateY(1px)
+    }
+
+    button:disabled {
+      filter: grayscale(.6);
+      opacity: .7;
+      cursor: not-allowed
+    }
+
+    .sum-tip {
+      margin-left: auto;
+      font-variant-numeric: tabular-nums
+    }
+
+    .sum-tip .ok {
+      color: #7CFFB2
+    }
+
+    .sum-tip .bad {
+      color: #ffb3b3
+    }
+
+    .chart-card {
+      padding: 10px;
+      display: flex;
+      flex-direction: column
+    }
+
+    #chart {
+      height: 560px;
+      width: 100%
+    }
+
+    .tips {
+      margin: 4px 10px 10px;
+      color: #9fb7ff;
+      font-size: 12px
+    }
+
+    @media (max-width: 980px) {
+      .wrap {
+        grid-template-columns: 1fr
+      }
+    }
   </style>
 </head>
 
@@ -134,7 +361,7 @@
       const canSubmit = s === 100
       const tip = canSubmit ? '权重已达100%，可提交' : '成长权重合计需等于100%'
       const submit = document.getElementById('submitBtn')
-      submit.disabled = !canSubmit; submit.title = tip;
+      submit.disabled = !canSubmit; submit.title = tip
     }
     function render () {
       const weighted = computeWeighted()
@@ -190,7 +417,7 @@
     function goDisplay (payload) { const key = 'radarPayload:' + payload.id; localStorage.setItem(key, JSON.stringify(payload)); const url = `display.html?id=${encodeURIComponent(payload.id)}`; location.href = url }
     document.getElementById('submitBtn').addEventListener('click', () => { if (sumWeights() !== 100) { alert('请将六个权重数值调整为合计 100%'); return } const payload = buildPayload(); goDisplay(payload) })
     document.getElementById('resetBtn').addEventListener('click', () => { state.scores = Array(6).fill(0); state.weights = Array(6).fill(0); dims.forEach((_, i) => { document.getElementById('score' + i).value = 0; document.getElementById('weight' + i).value = 0 }); const ti = document.getElementById('titleInput'); if (ti) ti.value = '综合素质雷达图'; const tg = document.getElementById('tagInput'); if (tg) tg.value = ''; render() })
-    window.addEventListener('resize', () => chart.resize()); refreshSumTip();
+    window.addEventListener('resize', () => chart.resize()); refreshSumTip()
     // 处理从展示页返回（history back / BFCache）时的状态同步
     window.addEventListener('pageshow', () => { syncStateFromInputs(); render() })
   </script>
